# sotsu

./: README.md  a.txt  change.txt  first.txt  firts.txt
denso_pkgs/denso_common/denso_common/: CMakeLists.txt  package.xml
denso_pkgs/denso_common/denso_execute/: package.xml
denso_pkgs/denso_path_planning/denso_path_planning/: CMakeLists.txt  package.xml
denso_pkgs/denso_path_planning/jacobi_planning/: package.xml
denso_pkgs/denso_path_planning/jacobi_planning/launch/: scene_publish.launch  test.launch
denso_pkgs/denso_recognition/denso_recognition/: package.xml
denso_pkgs/denso_recognition/denso_recognition_msgs/: package.xml
denso_pkgs/denso_recognition/denso_recognition_srvs/: CMakeLists.txt  package.xml
denso_pkgs/denso_recognition/image_processing_srvs/: package.xml
denso_pkgs/denso_recognition/image_processing_srvs/srv/: Gamma.srv
denso_pkgs/denso_recognition/pointcloud_processing/: CMakeLists.txt
denso_pkgs/denso_recognition/pointcloud_processing/launch/: crop_cloud.launch
denso_pkgs/denso_recognition/pointcloud_processing/src/: crop_cloud.cpp  filter_node.cpp
denso_pkgs/denso_recognition/pointcloud_registrator/: CMakeLists.txt
denso_pkgs/denso_recognition/pointcloud_registrator/src/: pointcloud_registrator_node.cpp
denso_pkgs/denso_recognition/template_matching/: package.xml
denso_pkgs/denso_recognition/template_matching/scripts/: template_matching.py
denso_pkgs/denso_robot/denso_control/: package.xml
denso_pkgs/denso_robot/denso_control/src/: denso_control.cpp
denso_run/denso_2020/meshcloud_pblisher_pkg/: CMakeLists.txt  README.md
denso_run/denso_2020/meshcloud_pblisher_pkg/config/: four_AR_cubes.yaml  four_AR_cubes_test.yaml  hv6.yaml  hv6_1.yaml  hv6_2.yaml  hv6_3.yaml  hv6_4.yaml  hv6_5.yaml  hv6_6.yaml  hv6_7.yaml  hv6_8.yaml  hv6_9.yaml  hv7.yaml  hv7.yaml.bak  hv7_1.yaml  hv7_2.yaml  hv7_3.yaml  hv7_4.yaml  hv7_5.yaml  hv7_6.yaml  hv7_7.yaml  hv7_8.yaml  hv7_9.yaml  hv8.yaml  hv8.yaml.bak  hv8_1.yaml  hv8_2.yaml  hv8_3.yaml  hv8_4.yaml  hv8_5.yaml  hv8_6.yaml  hv8_7.yaml  hv8_8.yaml  hv8_9.yaml  t_pipe.yaml
denso_run/denso_2020/meshcloud_pblisher_pkg/launch/: meshcloud_publisher.launch
denso_run/denso_2020/meshcloud_pblisher_pkg/src/: meshcloud_publisher.cpp  meshcloud_publisher_node.cpp  meshcloud_sampler.cpp
denso_run/denso_2020/pc_segmentation/: .gitignore  CMakeLists.txt  README.org
denso_run/denso_2020/pc_segmentation/include/: abc_algorithm.hpp  min_cut.hpp  pcd_ascii_save.hpp  super_voxel.hpp  super_voxel_def.hpp  supervoxel_clustering_v2.hpp
denso_run/denso_2020/pc_segmentation/json/: part1.json  part10.json  part11.json  part12.json  part13.json  part14.json  part15.json  part16.json  part17.json  part18.json  part19.json  part2.json  part20.json  part21.json  part3.json  part4.json  part5.json  part6.json  part7.json  part9.json
denso_run/denso_2020/pc_segmentation/pcd/: conditional_euclidean.pcd  flat_hv8_v2.pcd  hollowed_part10_cloud.pcd  hollowed_part14_cloud.pcd  hollowed_part16_cloud.pcd  hollowed_part17_cloud.pcd  hollowed_part1_cloud.pcd  hollowed_part3_cloud.pcd  hollowed_part4_cloud.pcd  hollowed_part9_cloud.pcd  part_in_box_v3_cylinder.pcd
denso_run/denso_2020/pc_segmentation/scripts/: createPCDformat.py
denso_run/denso_2020/pc_segmentation/src/: abc_algorithm_run.cpp  cloud_view.cpp  colored_cloud_view.cpp  conditional_euclidean.cpp  cylinder_seg.cpp  diff_points.cpp  euclidean.cpp  extract_segmentation_pc.cpp  make_hollowed_points.cpp  min_cut.cpp  pcd_ascii_save.cpp  pcd_convert_ascii.cpp  planar_seg.cpp  region_growing.cpp  super_voxel.cpp
denso_run/denso_apps/denso_apps/: CMakeLists.txt  package.xml
denso_run/denso_apps/denso_bringup/: package.xml
denso_run/denso_apps/denso_calib_gazebo/: CMakeLists.txt  package.xml
denso_run/denso_deps/moveit_mpp/: CMakeLists.txt  package.xml
denso_run/rikuken_original/2d_to_3d_ros/: CMakeLists.txt  README.md  package.xml
denso_run/rikuken_original/annotation_package/: CMakeLists.txt  package.xml
denso_run/rikuken_original/arm_move/: CMakeLists.txt  package.xml
denso_run/rikuken_original/ishiyama_annotation/: CMakeLists.txt  package.xml
denso_run/tercero_gazebo_srvs/: CMakeLists.txt  package.xml
denso_run/tercero_srvs/: CMakeLists.txt
tercero_ros_pkg/eip_pkg/: CMakeLists.txt  package.xml
tercero_ros_pkg/eip_pkg/include/: IDL.h  IDLTp.h  IDLTpint.h  IDL_error.h  IDL_hwpara.h  IDL_thread.h  IDL_version.h  OsIdl.h  ProductVersion.h  TP.h  abcc.h  abcc_ad_if.h  abcc_cfg.h  abcc_debug_err.h  abcc_drv_cfg.h  abcc_drv_if.h  abcc_drv_par_if.h  abcc_handler.h  abcc_identification.h  abcc_link.h  abcc_mem.h  abcc_obj_cfg.h  abcc_platform_cfg.h  abcc_port.h  abcc_setup.h  abcc_sw_port.h  abcc_sys_adapt.h  abcc_sys_adapt_par.h  abcc_td.h  abcc_timer.h  abp.h  abp_add.h  abp_asm.h  abp_bac.h  abp_ccl.h  abp_cipid.h  abp_cnt.h  abp_cop.h  abp_cpc.h  abp_cpn.h  (+36 more)
tercero_ros_pkg/eip_pkg/launch/: eip_start.launch
tercero_ros_pkg/eip_pkg/lib/: libidl115DriverLinux.so.1.0.661.0  libidlLinux.so.1.0.661.0
tercero_ros_pkg/eip_pkg/src/: abcc_debug_err.c  abcc_handler.c  abcc_handler_par.c  abcc_link.c  abcc_mem.c  abcc_par_drv.c  abcc_remap.c  abcc_setup.c  abcc_sw_port.c  abcc_sys_adapt.c  abcc_timer.c  ad_obj.c  app_obj.c  appl_abcc_handler.c  appl_adimap_alltypes.c  appl_adimap_separate16.c  appl_adimap_simple16.c  appl_adimap_speed.c  cop.c  dev.c  dpv1.c  ect.c  eip.c  eip_start.cpp  epl.c  etn_obj.c  mod.c  prt.c  sync_obj.c
tercero_ros_pkg/tercero_control/: CMakeLists.txt
tercero_ros_pkg/tercero_control/src/: tercero_joint_state_republisher.cpp  tercero_joint_state_republisher_node.cpp
tercero_ros_pkg/tercero_description/: CMakeLists.txt
tercero_ros_pkg/tercero_description/robots/: tercero.urdf.xacro
tercero_ros_pkg/tercero_gazebo/: package.xml
tercero_ros_pkg/tercero_gazebo/launch/: spawn_tercero.launch
tercero_ros_pkg/tercero_gazebo/robots/: tercero.gazebo.macro.xacro  tercero.gazebo.xacro
tercero_ros_pkg/tercero_gazebo/urdf/: finger.gazebo.macro.xacro  hand_body.gazebo.macro.xacro  third_finger.gazebo.macro.xacro
(+7659 files in other folders)
