<?xml version="1.0"?>

<package format="2">
  <name>eip_pkg</name>
  <version>0.0.0</version>

  <description>TODO</description>

  <maintainer email="httperror@404-notfound.jp">Yamasaki Tatsuya</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>roslaunch</test_depend>

</package>
