<?xml version="1.0"?>
<package format="2">
  <name>denso_execute</name>
  <version>1.0.0</version>
  <description>The denso_execute package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_msgs</depend>
  <depend>genmsg</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>moveit_commander</depend>
  <depend>moveit_core</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_perception</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf</depend>

  <build_depend>cmake_modules</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>moveit_fake_controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_controllers</exec_depend>

  <test_depend>roslaunch</test_depend>

</package>
