<?xml version="1.0"?>
<package format="2">
  <name>denso_path_planning</name>
  <version>1.0.0</version>
  <description>The denso_path_planning package</description>

  <maintainer email="atsuki.yokota@gmail.com">Atsuki Yokota</maintainer>
  <license>BSD</license>
  <url type="repository">http://github.com/Nishida-Lab/denso_path_planning</url>
  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>jacobi_planning</exec_depend>
  <exec_depend>moveit_mpp</exec_depend>

  <export>
    <metapackage />
  </export>
</package>
