<?xml version="1.0"?>
<package format="2">
  <name>denso_recognition_msgs</name>
  <version>0.0.0</version>
  <description>The denso_recognition_msgs package</description>
  <maintainer email="hondasora@todo.todo">hondasora</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
