<?xml version="1.0"?>
<package format="2">
  <name>image_processing_srvs</name>
  <version>0.0.0</version>
  <description>image_processing_srvs</description>

  <maintainer email="nishidalab@todo.todo">nishidalab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
