<?xml version="1.0"?>
<package format="2">
  <name>template_matching</name>
  <version>0.0.0</version>
  <description>The template_matching package</description>

  <maintainer email="yoshimoto@todo.todo">yoshimoto</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>rospy</build_depend>
  <exec_depend>rospy</exec_depend>
  <test_depend>roslaunch</test_depend>

</package>
