<?xml version="1.0"?>
<package format="2">
  <name>denso_control</name>
  <version>3.0.2</version>
  <description>The denso robot control package includes a node for controlling DENSO robot controllers with MoveIt!.</description>
  <maintainer email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</maintainer>
  <license>MIT</license>
  <url type="website">http://ros.org/wiki/denso_robot_control</url>
  <author email="denso_robot_soft@denso-wave.co.jp">DENSO WAVE INCORPORATED</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>bcap_core</depend>
  <depend>bcap_service</depend>
  <depend>controller_manager</depend>
  <depend>denso_robot_core</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>transmission_interface</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>denso_descriptions</test_depend>
  <test_depend>roslaunch</test_depend>
</package>
