<?xml version="1.0"?>
<package format="2">
  <name>moveit_mpp</name>
  <version>0.0.0</version>
  <description>Multi-planner plugin hoster plugin for MoveIt</description>
  <author>G.A. vd. Hoorn (TU Delft Robotics Institute)</author>
  <maintainer email="g.a.vanderhoorn@tudelft.nl">G.A. vd. Hoorn (TU Delft Robotics Institute)</maintainer>
  <license>Apache2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>moveit_core</depend>  
  <depend>moveit_ros_planning</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>

  <export>
    <moveit_core plugin="${prefix}/mpp_plugin_description.xml"/>
  </export>
</package>
